--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -45,7 +45,7 @@
             </div>
             <div class="d-flex col flex-column align-self-end min-vh-100 w-75">
 
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block align-top"
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block top"
                      style="border: 1px solid darkgrey;border-radius: 2rem;">
                     <div class="row">
                         <div class="col">
@@ -63,14 +63,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block align-bottom"
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom"
                      style="border: 1px solid darkgrey;border-radius: 2rem;">
-                    <h2 class="display-3 text-center">Take part in the survey about the biennial <span
-                            class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
-                    </br>
-                    <a class="btn btn-danger btn-lg btn-xxl text-white" data-bs-toggle="modal"
-                       data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
-                       onClick="call_startSurvey('en');">Start the survey</a>
+                    <div class="row">
+                        <div class="col">
+                            <h2 class="display-3 text-center">Take part in the survey about the biennial <span
+                                    class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
+                        </div>
+                        </br>
+                        <div class="col">
+                            <a class="btn btn-danger btn-lg btn-xxl text-white" data-bs-toggle="modal"
+                               data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
+                               onClick="call_startSurvey('en');">Start the survey</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
