--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -45,7 +45,7 @@
             </div>
             <div class="d-flex col flex-column align-self-end min-vh-100 w-75">
 
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block top"
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block top translate-middle"
                      style="border: 1px solid darkgrey;border-radius: 2rem;">
                     <div class="row">
                         <div class="col">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom"
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom translate-middle"
                      style="border: 1px solid darkgrey;border-radius: 2rem;">
                     <div class="row">
                         <div class="col">
