--- a/html5/index.html
+++ b/html5/index.html
@@ -1,168 +1,125 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" translate="no" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-	<!--
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="width=1920px, initial-scale=1">
-	-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="google" content="notranslate">
     <meta name="description" content="Umfrage zur Ostrale Biennale O23">
     <meta name="author" content="Th.Haupt">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" crossorigin="anonymous" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          crossorigin="anonymous"/>
     <!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+          crossorigin="anonymous"/>
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+          crossorigin="anonymous"/>
     <!-- JQuery JS -->
-    <script ASYNC src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://unpkg.com/survey-jquery/survey.jquery.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" crossorigin="anonymous"></script>
-
+    <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>
     <!-- SurveyJS Theme CSS -->
-    <link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css"  crossorigin="anonymous"/>-->
+    <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
+    <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin="anonymous"/>
     <!--<link rel="stylesheet" href="./css/normalize.min.css" crossorigin="anonymous" />-->
     <!-- Apply the Bootstrap theme -->
 
-
-
-    <link rel="stylesheet" href ="./css/styles.css" crossorigin="anonymous" />
-    <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico" />
-    <script ASYNC src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/styles.css" crossorigin="anonymous"/>
+    <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico"/>
+    <script ASYNC src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+    <script ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
+    <script ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js"
+            crossorigin="anonymous"></script>
+    <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
+    <!--<script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
+    <script src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
-<body id="pageID">
-<header>
-    <div class="container container-xxl">
-        <div class="row justify-content-between">
-            <div class="col-md-8 col-lg-6 logo">
-               <p class="text-bold float-start text-left" style="line-height:0.9em;margin-bottom:0;"><span class="text-danger bs-red text-bold">O</span>STRALE Biennale <span class="text-danger bs-red text-bold">O</span>23</p>
-               <p class="small float-end text-right"><span id="headerTextID" style="font-size:0.8rem;padding-left: 9.5em;" class="font-monospace">14. Internationale Ausstellung zeitgenössischer Künste</span></p>
-            </div>
-            <div class="col-md-4 col-lg-6 logo bg-image end" id="logoID" style="background-image: url('./images/kammer_flimmern_o23_375x75.jpg');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
-        </div>
-    </div>
+<body id="page">
+<header class="d-none">
 </header>
 <main>
-<div class="container-lg">
+    <div class="container-xl">
+        <div class="row justify-content-evenly">
+            <div class="d-flex col start min-vh-100"
+                 style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
+            </div>
+            <div class="d-flex col flex-column end min-vh-100 vh-100">
+                <div class="row justify-content-evenly ms-auto h-50 ">
 
-   <div id="carouselId" class="carousel carousel-dark slide" data-bs-ride="carousel">
-	<!-- Carousel indicators -->
-        <ol class="carousel-indicators hidden d-none">
-            <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active"></li>
-            <li data-bs-target="#carouselId" data-bs-slide-to="1"></li>
-            <li data-bs-target="#carouselId" data-bs-slide-to="2"></li>
-            <li data-bs-target="#carouselId" data-bs-slide-to="3"></li>
-        </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <div class="row justify-content-evenly">
-                    <div class="col-8 start">
-			<br />
-			<br />
-                        <img src = "./images/slider/slide01-abben_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
-                        <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic text-small">Stephanie Abben /de</span></p>
-                    </div>
-                    <div class="col-4 end">
-			<br />
-			<br />
-			<br />
-			<br />
-                        <h2 class="display-3 text-center">Beteilige Dich an der <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23 Umfrage!</h2>
-                        <br/>
-                        <div class="carousel-caption bottom d-none d-md-block">
-                            <a class="btn btn-danger btn-lg btn-xxl text-white ripple" href="./umfrage.html" data-language="de" role="button"id="BtnDE1">Starte Umfrage</a>
-                         </div>
-                    </div>
-                </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="10000">
-                    <div class="row justify-content-evenly">
-                    <div class="col-4 start">
-			<br />
-			<br />
-			<br />
-			<br />
-                        <h2 class="display-3 text-center">Take part in the survey about the biennial <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
-			<br />
-			<br />
-                        <div class="carousel-caption bottom d-none d-md-block">
-                            <a class="btn btn-danger btn-lg btn-xxl text-white ripple" href="./umfrage.html" data-language="en" role="button" id="BtnEN1">Start the survey</a>
+                    <div class="col d-flex d-inline-block top rounded-3"
+                         style="border: 1px solid darkgrey;">
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="display-4 ms-auto">Beteilige Dich an der
+                                    <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
+                                    Umfrage!
+                                </h3>
+                            </div>
+                            </br>
+                            <div class="row align-items-center">
+                                <div class="col align-self-center ms-auto">
+                                    <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
+                                       onClick="call_startSurvey('de');">Starte Umfrage</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-8 end">
-			<br />
-			<br />
-                        <img src="./images/slider/slide02-choi_581x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
-                        <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Elvio Chiricozzi /en</span></p>
-                    </div>
-                    </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="10000">
-                    <div class="row justify-content-evenly">
-                    <div class="col-4 end">
-			<br />
-			<br />
-<br />
-			<br />
-                        <h2 class="display-3 text-center">Sag uns Deine Meinung!</h2>
-                        <br />
-			<br />
-                        <div class="carousel-caption bottom d-none d-md-block">
-                            <a class="btn btn-lg btn-danger btn-xxl text-white ripple" href="./umfrage.html" data-language="de" role="button"id="BtnDE2">Starte Umfrage</a>
+                <div class="row justify-content-evenly ms-auto h-50 ">
+                    <div class="d-flex col align-self-centerd-inline-block bottom rounded-3"
+                         style="border: 1px solid darkgrey;">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
+                                        class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
+                                </h3>
+                            </div>
+                            </br>
+                            <div class="row align-items-center">
+                                <div class="col align-self-auto ms-auto">
+                                    <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 ms-auto rounded-bottom"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
+                                       onClick="call_startSurvey('en');">Start the survey</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-8 start">
-			<br />
-			<br />
-                        <img src="./images/slider/slide03-wesley_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
-                        <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Michael Wesely /en</span></p>
-                    </div>
+
                 </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="10000">
-                    <div class="row justify-content-evenly">
-                    <div class="col-8 start">
-			<br />
-			<br />
-                        <img src="./images/slider/slide04-valenta_580x581px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
-                        <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Philipp Valenta /de</span></p>
-                    </div>
-                    <div class="col-4 end">
-			<br />
-			<br />
-			<br />
-			<br />
-                        <h2 class="display-3 text-center">Tell us your opinion</h2>
-                        <br />
-			<br />
-                        <div class="carousel-caption bottom d-none d-md-block">
-                            <a class="btn btn-danger btn-lg btn-xxl text-white ripple" href="./umfrage.html" data-language="en" role="button" id="BtnEN2">Start the survey</a>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-             </div>
-      
-</div>
-  </div>
+            </div>
+        </div>
+    </div>
 </main>
-<footer class="py-5 bg-light d-none">
-   <div class="container-xl">
-	<div class="row justify-content-end">
-	  <div class="col end">
-	      <p class="m-0 text-right text-red">© Ostrale 2023 | All Rights Reserved | Version: 2.0.9 - by fehlercode42</p>
-	  </div>
-	</div>
-   </div>
-</footer>
-<!-- Bootstrap JS Bundle with Popper -->
+<footer class="d-none">© Ostrale 2023 | All Rights Reserved | Version: 2.0.10-stable // @fehlercode42</footer>
 </body>
+<div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
+                <button class="carousel-control-prev-icon" disabled aria-label="Zur&uml;ck / Back">
+                    <span aria-hidden="true"><i
+                            class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times</span>
+                </button>
+                <button class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="surveyElement" style="/*display: inline-flex;*/">
+                    <survey params="survey: model"></survey>
+                    <survey params="survey.defaultLocale: en"></survey>
+                    <survey params="survey.locale: de"></survey>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </html>
