--- a/html5/index.html
+++ b/html5/index.html
@@ -44,13 +44,13 @@
 <main>
     <div class="container-fluid">
         <div class="row min-vh-100"
-             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 2rem;">
+             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 4rem;">
             <div class="d-flex col start min-vh-100"></div>
             <div class="d-flex col end min-vh-100">
-                <div class="rahmen h-50 w-100" style="padding-top: 2em;padding-bottom: 2em;">
-                    <div class="row justify-content-evenly w-100">
-                        <div class="rahmen d-flex col inline-block top rounded-3"
-                             style="padding: 2em;border: 1px solid darkgrey;">
+                <div class="rahmen w-100">
+                    <div class="row justify-content-evenly w-100 h-50 top"
+                         style="padding-top: 2em;padding-bottom: 2em;">
+                        <div class="rahmen col inline-block rounded-3" style="padding: 2em;border: 1px solid darkred;">
                             <div class="row">
                                 <div class="col">
                                     <br>
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="row align-items-center">
                                     <div class="d-flex col align-items-start ms-auto">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 ms-auto rounded-bottom shadow"
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-6 rounded-3 ms-auto rounded-bottom shadow"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
                                     </div>
@@ -70,9 +70,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-evenly w-100" style="padding-top: 2em;padding-bottom: 2em;">
-                        <div class="rahmen d-flex col end d-inline-block bottom rounded-3"
-                             style="border: 1px solid darkgrey;padding: 2em;">
+                    <div class="row justify-content-evenly w-100 h-50 bottom"
+                         style="padding-top: 2em;padding-bottom: 2em;">
+                        <div class="rahmen col end inline-block rounded-3" style="border: 1px solid red;padding: 2em;">
                             <div class="row">
                                 <div class="col">
                                     <br>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="row align-items-center">
                                     <div class="d-flex col align-self-end ms-auto">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-6 rounded-3 ms-auto rounded-bottom"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
                                             survey</a>
