--- a/html5/index.html
+++ b/html5/index.html
@@ -42,15 +42,16 @@
 <header class="d-none">
 </header>
 <main>
-    <div class="container-fluid">
+    <div class="container-fluid"
+         style=" background-image:url('./images/robotron-kantine_893x664px_96dpi.png'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position:bottom right;">
         <div class="row min-vh-100"
              style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 4rem;">
             <div class="d-flex col start min-vh-100"></div>
             <div class="d-flex col end min-vh-100"
-                 style="padding-right:5rem; background-image:url('./images/robotron-kantine_893x664px_96dpi.png'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position:center;">
-                <div class="rahmen w-100" style="opacity: 0.7;">
+                 style="padding-right:5rem;">
+                <div class="rahmen w-100" style="opacity: 0.5;">
                     <div class="row justify-content-evenly w-100 h-50 top"
-                         style="padding-top: 2em;padding-bottom: 2em;">
+                         style="padding-top: 2em;padding-bottom: 2em;background-color: #fff3cd;opacity: 0.7;">
                         <div class="rahmen col inline-block rounded-3 shadow-3"
                              style="padding: 2em;border: 2px solid darkred;">
                             <div class="row">
@@ -73,7 +74,7 @@
                         </div>
                     </div>
                     <div class="row justify-content-evenly w-100 h-50 bottom"
-                         style="padding-top: 2em;padding-bottom: 2em;">
+                         style="padding-top: 2em;padding-bottom: 2em;background-color: #fff3cd;opacity: 0.7;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg "
                              style="border: 2px solid darkred;padding: 2em;">
                             <div class="row">
